sass and header

--- a/snipet.html
+++ b/snipet.html
@@ -5,3 +5,9 @@
   <p class="humidity">Humidity {30}</p>
   <p class="wind-speed">wind {30} m/s</p>
 </div>
+
+
+<div class="titile">
+  <h1>weather app</h1>
+</div>
+  
